[gd_scene load_steps=6 format=3 uid="uid://dd05v5twofsm7"]

[ext_resource type="Script" uid="uid://co5o5votboo4r" path="res://scripts/ui/LevelSelect.gd" id="1_jfs68"]
[ext_resource type="Texture2D" uid="uid://cyg71x0tehglf" path="res://assets/ui/Background/Default.png" id="1_jugk5"]
[ext_resource type="Texture2D" uid="uid://c8vtelxv3rum6" path="res://assets/ui/Star/Active.png" id="2_droh6"]
[ext_resource type="Texture2D" uid="uid://syky7sh20v5m" path="res://assets/ui/Buttons/Square/Home/Default.png" id="4_jbleg"]
[ext_resource type="Texture2D" uid="uid://vjruocs4l2m4" path="res://assets/ui/Level/Button/WithStars.png" id="5_jfs68"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jfs68")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_jugk5")
expand_mode = 1

[node name="Star" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 72.0
offset_top = 70.0
offset_right = 177.0
offset_bottom = 169.0
texture = ExtResource("2_droh6")
expand_mode = 1

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1770.0
offset_top = 935.0
offset_right = 1862.0
offset_bottom = 1027.0
icon = ExtResource("4_jbleg")
flat = true

[node name="Levels" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 447.0
offset_top = 262.0
offset_right = 1511.0
offset_bottom = 851.0

[node name="Row1" type="HBoxContainer" parent="Levels"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Level1" type="Button" parent="Levels/Row1"]
layout_mode = 2
icon = ExtResource("5_jfs68")
flat = true

[node name="Level2" type="Button" parent="Levels/Row1"]
layout_mode = 2
icon = ExtResource("5_jfs68")
flat = true
